# ASTen

./: .gitignore  CMakeLists.txt  README.md  test_install.py  test_view.py
ASTen/: __init__.py  bindings.cpp
aten/native/: ops.c  ops.h  view_ops.c  view_ops.h
c10/core/: device.h  dtype.h  storage.c  storage.h  tensor.c  tensor.h
